# super-simple-stm32-rust

./: Cargo.toml  README.md  openocd.gdb
src/: main.rs
